<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    tools:context=".activities.CreateTodoActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/background_secondary"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_todo_page_title"
            android:textColor="@color/primary"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/todo_title_label"
                android:textColor="@color/background_secondary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_text_create_todo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/todo_title_hint"
                android:inputType="text"
                android:textColor="@color/background_secondary"
                android:textColorHint="@color/background_secondary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/todo_description_label"
                android:textColor="@color/background_secondary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_text_create_todo_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/todo_list_description_hint"
                android:inputType="textMultiLine"
                android:textColor="@color/background_secondary"
                android:textColorHint="@color/background_secondary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/todo_priority_label"
                android:textColor="@color/background_secondary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_group_create_todo_priority"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radio_button_create_todo_priority_true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/todo_priority_true_value"
                    android:textColor="@color/background_secondary"
                    app:buttonTint="@color/background_secondary" />

                <RadioButton
                    android:id="@+id/radio_button_create_todo_priority_false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/todo_priority_false_value"
                    android:textColor="@color/background_secondary"
                    app:buttonTint="@color/background_secondary" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_create_todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/background_secondary"
                android:text="@string/save_button_text"
                android:textColor="@color/primary"
                app:backgroundTint="@color/background_secondary" />

            <Button
                android:id="@+id/button_back_to_detail_todo_list_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/background_secondary"
                android:text="@string/back_button_text"
                android:textColor="@color/primary"
                app:backgroundTint="@color/background_secondary" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>